
-- New sampling algorithm (RW_dirichlet) added to MCMC engine, for sampling non-conjugate Dirichlet distributions.

-- Fixed bug preventing use of round() in DSL and BUGS code.

-- Added checking at time of model definition to catch errors where implied dimensions of a variable are different in different BUGS declarations.


                           CHANGES IN VERSION 0.6-3 (December 2016)

USER LEVEL CHANGES

-- Minor bug fixes: sd() and var() were not working in BUGS code, fix to MCEM code

DEVELOPER LEVEL CHANGES

-- Removed use of compileNimble in rankSample to avoid Solaris issues
   

                           CHANGES IN VERSION 0.6-2 (November 2016)

USER LEVEL CHANGES

-- Added ability to add conjugate (Gibbs) samplers to particular nodes in an MCMC configuration object using: conf$addSampler(nodeName, 'conjugate').

-- dmulti(), rmulti(), dcat() and rcat() now allow 'probs' argument with arbitrary non-negative values and internally normalize these so they sum to one, to be consistent with R's multinom behavior.

-- Added optional (turned on by default) checking of nimbleFunction run code to warn users if they are calling functions (in particular, R functions) that are not part of the NIMBLE DSL.

-- Added getBound() functionality that provides dynamic access to lower and upper bounds on a node (from R or in the DSL), based on the underlying distribution and any user-defined truncation. Functionality is analogous to getParam(). Now used in the reflection sampler and the MCEM algorithm.

-- cleaned up and added functionality to get information about a distribution based on its name or to get distributional information about model nodes or variables. This functionality is expected to be useful in querying nodes in nimbleFunction setup code when writing algorithms. See help on getDistributionInfo for getting information based on distribution name and help on modelBaseClass for getting distribution information about nodes and variables.
