@@ -10,6 +10,12 @@ USER LEVEL CHANGES
 
 -- Added checking at time of model definition to catch errors where implied dimensions of a variable are different in different BUGS declarations.
 
+BUG FIXES
+
+-- Fixed bug in RW_PF sampler where dependencies were not being updated after proposal value was inserted into target node
+
+-- Fixed bugs in RW_PF and RW_PF_block samplers where stored LP0 was not being updated with potentially new log probability for target node at each iteration.  
+
 
                            CHANGES IN VERSION 0.6-3 (December 2016)
 
